--- a/project/report.tex
+++ b/project/report.tex
@@ -98,7 +98,7 @@ The simplest feature vector is simply a ``bag of words'' for each day~\cite{feat
 in MATLAB to reduce memory consumption to reasonable levels).
 
 An obvious weakness of this technique is that it takes words out of context. Phrases such as ``stocks went up'' simply increase the counts of the three words independently. We augmented this technique by creating ``bags of phrases'' as well. In addition to counts of words, we keep counts of two and three word phrases
-as well. We turn phrases into single words of the form ``word1-word2'' and ``word1-word2-word3'' with the restrictions that word1 and word3 may not be common words and the first or last words of a phrase may not be a single character. Common words beginning a 2 word phrase or ending a 3 word phrase are undesirable because we want to pick up on phrases where the subject is important. The middle word in the 3 word phrases may be common so we find phrases that combine two useful words such as, ``stocks are down.'' Filtering out phrases that appear less than $m = 10$ times in the year results in 194,679 unique phrases and words, so this technique can greatly increase the number of features.
+as well. We turn phrases into single words of the form ``word1-word2'' and ``word1-word2-word3'' with the restrictions that word1 and word3 may not be common words and the first or last words of a phrase may not be a single character. Common words beginning a 2 word phrase or ending a 3 word phrase are undesirable because we want to pick up on phrases where the subject is important. The middle word in the 3 word phrases may be common so we find phrases that combine two useful words such as, ``stocks are down.'' Filtering out phrases that appear less than $m = 10$ times in the year results in 194,679 unique words and phrases, so this technique can greatly increase the number of features. When using phrases, we instead filter out words and phrases that appear less than $m = 50$ times in the year, leaving us with 37,904 words and phrases. 
 
 A bag of words for each day has several other problems. First, it reduces all articles for a single day to a bag of words for that day, potentially losing some information. Computing on counts of words per article per day would quickly become intractable in terms of memory consumption, so this simplifying assumption was necessary to compute on the data. Another problem is that some days have fewer articles than other days, which is a source of variation in the data which we do not wish to measure. We can condition our data to replace each word count with the proportion of times that word appears out of all words in the day, and we evaluate the effect of this conditioning later on SVMs and K-Nearest-Neighbor methods which may benefit from it. This kind of conditioning is unnecessary for Naive Bayes.
 
@@ -282,9 +282,96 @@ Along the way we use our findings to gain insight into the underlying model and 
 \subsection{Predicting the Dow Jones based on the Wall Street Journal}
 \label{wsj->dj}
 
+The first question we wish to answer is whether we can find correlations between words in the Wall Street Journal and the Dow Jones, and use these correlations to make correctly classify days ``up days'' or ``down days.'' If such a correlation exists, then there are three explanations: the Wall Street Journal influences the stock market prices, the stock market prices influence the Wall Street Journal, or some external ``state of the world'' influences both. While the last possibility is probably most relevant to predicting prices, we also wish to know if we can uncover a correlation which we have reason to believe exists: the correlation between the articles on day $d$ and the closing price on day $d-1$. 
+
+\TODO{Say we can use NB with other models because it is probabilistic, and adaboost builds on decision stumps which build on decision trees and tell us something about our data}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|}
+NB 12 fold cv average:
+yesterday 51.46
+today 52.71
+today-aug 51.46
+tomorrow 51.98
+
+phrases:
+yesterday 52.58
+today 53.84
+today-aug 52.05
+tomorrow 58.33
+\end{tabular}
+\caption{This table shows some data}
+\label{tab:nbcompare}
+\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Data Used & $M = 5$ & $M = 10$ \\ \hline
+words-yesterday & 49.80 & 48.94 \\
+words-today     & 50.93 & 48.94 \\
+words-today-aug & 52.05 & 52.91 \\
+words-tomorrow  & 52.31 & 47.82 \\
+phrases-yesterday & 48.15 & 47.29 \\ 
+phrases-today    & 49.07 & 46.16 \\
+phrases-today-aug & 48.28 & 49.40 \\
+phrases-tomorrow  & 83.40 & 77.38 \\ \hline
+\end{tabular}
+\caption{AdaBoost comparison on several different feature vectors with different number of boosting rounds $M$.}
+\label{tab:nbcompare}
+\end{table}
+
 \begin{itemize}
-\item The word ``ambitions'' is the best indicator of the Dow Jones gaining. If ``ambitions'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones went up on that day.
+\item The word ``ambitions'' is the best indicator of the Dow Jones gaining on the same day. If ``ambitions'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones went up on that day.
 \item The word ``tundra'' is the best indicator of the Dow Jones falling. If ``tundra'' appeared in the WSJ there was a 64.26\% chance that the Dow Jones fell on that day. This is because a series of articles in the WSJ where they talk about how Toyota is producing more cars outside the us and where they mention the Toyota Tundra. Another item is how Toyota is passing GM in sales (tundra is mentioned). A third item is about how Tundras had to be discounted (Toyota is on the Dow Jones).
+
+\item The word ``jarring'' in tomorrow's news predicts that today goes up correctly 63.59\% of the time. This is interesting, because that word could be used to refer to the market performance on the previous day. In at least one case, it is used to refer to the ``jarring reversal of recent market trends,'' which is a good feature to pick up on.
+
+\item The phrase ``reserve chairman ben'' in yesterda's news predicts that today goes down correctly 63.15\% of the time. Articles which mention Federal Reserve chairman Ben Bernanke cite him saying that he plans on cutting interest rates and him warning about a looming recession.
+
+
+
+Validating on group 4/12
+Best word is: fell-or-points (12004). It classified 173/228 examples correctly.
+If that word was present the stock market was more likely to go down
+
+Best word is: rose-points (28917). It classified 159/228 examples correctly.
+If that word was present the stock market was more likely to go up
+
+Best word is: average-fell (2485). It classified 155/228 examples correctly.
+If that word was present the stock market was more likely to go down
+
+Best word is: action-stocks-rose (291). It classified 139/228 examples correctly.
+If that word was present the stock market was more likely to go up
+
+Best word is: industrials-fell (16664). It classified 162/228 examples correctly.
+If that word was present the stock market was more likely to go down
+
+
+From the previous results, it seems that using phrases does better than words in general. Though the 
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|}
+knn (K,R) = (1,50) (1,75) (1,100) (5,50) (5,75) (5,100) (10,50) (10,75) (10,100)
+
+yesterday  
+today      
+6-day-mem  
+tomorrow   
+
+knn (K,R) = (1,50) (1,100) (1,150) (5,50) (5,100) (5, 150) (10,50) (10,100) (10,150)
+yesterday 
+today       48.02  51.59   51.26    55.36  51.72   48.94   56.68 57.54 54.76
+6-day-mem 
+tomorrow  
+\end{tabular}
+\caption{This table shows some data}
+\label{tab:nbcompare}
+\end{table}
 
 
 \subsubsection*{Temporal Shift}
