--- a/project/report.tex
+++ b/project/report.tex
@@ -32,7 +32,7 @@
 
 \begin{figure}
 \includegraphics[width=8.5cm]{experiments/dj_performance.pdf}
-\caption{Dow Jones movement from January 1 to December 31 2007. The Y axis shows cumulative movement since January 1. We make the simplifying assumption that the Dow Jones moves a unit distance up or down on any day, which makes this a graph of Dow Jones performance in 2007.}
+\caption{Dow Jones movement from January 1 to December 31 2007. The Y axis shows cumulative movement since January 1.}
 \label{fig:dj-preformance}
 \end{figure}
 
@@ -341,15 +341,14 @@ Since the pick-most-common heuristic for the most part dominates the pick-previo
 \subsubsection{Markov Models}
 \label{mm-eval}
 
-As described in section~\ref{sec:mm} we implemented a M-order Markov Model for any M.
-We ran the Markov model on the whole sequence for $M=[1,10]$ ($w=M+1$), each time training a Markov Model on the first $t-1$ elements of $Y$ and using the resulting parameter $\theta$ to predict the value of $Y^{(t)}$.
+As described in Section~\ref{sec:mm} we implemented a M-order Markov Model for any M.
+We ran the Markov Model on the whole sequence for $M=[1,10]$ ($w=M+1$), each time training a Markov Model on the first $t-1$ elements of $Y$ and using the resulting parameter $\theta$ to predict the value of $Y^{(t)}$.
 We were able to train very high order Markov Models ($M=40$) using sparse parameter matrices.
 However, for higher orders the parameter matrices is mostly empty and predictions therefore just become a tie-breaking, which is not very useful.
 Figure~\ref{fig:mm-experiment} shows the aggregate prediction ratios of the Markov Models of order 1--6, together with the predict-most-common baseline.
 
 As we can see the lower order Markov Models perform better, which is because they converge on always predicting that the Dow Jones goes up (the dominant direction). Thus they closely follow the pick-most-common heuristic once they stabilize.
 However, for early predictions the Markov Model has not yet become convinced that it should predict up. In fact, early in 2007, when there was less market volatile that later in the year, the fourth order Markov Model is able to outperform the baseline as it finds some local trends.
-
 
 \begin{figure*}
 \center
@@ -362,6 +361,27 @@ However, for early predictions the Markov Model has not yet become convinced tha
 
 \subsubsection{Hidden Markov Models}
 \label{hmm-eval}
+
+As described in Section~\ref{sec:hmm} we also implemented a Hidden Markov Model (HMM) predictor that relies heavily on MATLABs HMM toolkit for training and inference.
+We ran our HMMon the whole sequence of data. For each $t$ we used all preceding observations ($Y^{(1)}$, ..., $Y^{(t-1)}$) to train our HMM and then used the HMM to predict $Y^{(t)}$.
+We found that altering the initial guesses for the transition matrix A and emission matrix B didn't impact our predictions much.
+However, we postulated two hidden states and made both A and B diagonal matrices with 0.6 on the diagonal.
+
+Figure~\ref{fig:hmm-experiment} shows the HMM performance as a function of days.
+The HMM predictor achieved 54.8\% accuracy on the whole dataset and thus also failed to beat the pick-most-common heuristic.
+To gain some insight into why this is we also plotted the performance of the Dow Jones.
+As we can see the Dow Jones follow a clear up-trend in the beginning of the year, while the last part of the year is very volatile without many longer-term downtrends.
+The HMM therefore has few opportunities to get leverage on the baseline.
+However, one such opportunity appears just before day 100. Here we can see that the Dow Jones falls for several days. This naturally causes the baseline's accuracy to fall, while the HMM is able to address the trend and reverse course to predicting negative days.
+
+
+\begin{figure*}
+\center
+\hspace{0.5cm}
+\includegraphics[width=16cm]{experiments/hmm_experiment.pdf}
+\caption{Plot showing the accuracy of the baseline heuristic and the accuracy of the Hidden Markov Model. Furthermore, the performance of the Dow Jones is plotted as a stippled green graph.}
+\label{fig:hmm-experiment}
+\end{figure*}
 
 
 \subsubsection{Conclusions}
