--- a/project/report.tex
+++ b/project/report.tex
@@ -24,9 +24,25 @@
 \maketitle
 
 \begin{abstract}
+Predicting the performance of Stock Market Indexes such as the Dow Jones Industrial Average (DJ) is important for any investor, whether she is private or the manager of a fund such as a pension fund.
+A plethora of data sources are available that contain information important that may indicate which way the stock market will move and the human investor quickly becomes overwhelmed. A few examples of such data sources are newspapers, twitter, past performance and reports such as government job reports.
+
+In this paper we investigate whether we can predict the up or down movement of the Dow Jones based two factors: (i) articles of the Wall Street Journal (WSJ) and (ii) past Dow Jones performance.
+To this end we have implemented a suite of Machine Learning classifiers with complementary features that we believe may expose market trends.
+We combine these with feature and topic modeling techniques to explore various approaches to predicting the Dow Jones.
+
+We find that we can predict the movement of the Dow Jones with 83.4\% accuracy based on the next days article of the Wall Street Journal using AdaBoost, which is strong evidence that a correlation between the two exist and that it can be detected using algorithmic approaches.
+Using Naive Bayes we achieve an accuracy of 53.84\% in predicting todays movement of the DJ based on this mornings article of the WSJ.
+This demonstrates that the correlation between the two may actually be used to make money.
+Finally, using Hidden Markov Models to model todays performance based on previous performance, combined with Naive Bayes to incorporate todays issue of the WSJ we achieve an accuracy of 55.7\% in an online setting.
+This demonstrates that in a real world setting it may be possible to make money using our techniques.
 \end{abstract}
 
 \section{Introduction}
+
+Some, such as Naive Bayes and AdaBoost can be used directly to predict DJ movements based on articles of the Wall Street Journal. Others, Like Nearest  SVMs and Neighbor methods are infeasible or ineffective on such a large textual corpus, due to the high dimensionality of the word vectors (tens to hundred of thousands), and therefore require dimensionality reduction.
+Others still, such as Markov Models and Hidden Markov Models are sequential and can be used to predict DJ performance based on previous performance.
+
 
 \TODO{Describe how we took an exploratory approach with made us end up with many classifiers. That is, we tried simple classifiers first and moved on to more sophisticated classifiers when we were not happy with our results.}
 
