--- a/project/report.tex
+++ b/project/report.tex
@@ -523,9 +523,10 @@ He also did most of the evaluation of the non-sequential models.
 
 Fredrik implemented all the classifiers except the Nearest Neighbor classifier and the SVM (which we reused from our previous homework assignment).
 These are: Naive Bayes, AdaBoost with Decision Stumps, M-Order Markov Models for any M, and Hidden Markov Models (the latter builds heavily, but not completely, on the MATLAB HMM Toolkit).
+He also implemented most of the sequential and cross-validation framework and some of the framework for evaluating NB/AdaBoost.
 He also did most of the evaluation work for the sequential models, including the combination of Hidden Markov Models with Naive Bayes using HMM marginals as NB priors.
 
-We wrote up the report together, with each person having the main responsibility for writing up the parts he focused on. 
+We wrote up the report together, with each person having the main responsibility for writing up the parts he focused on.
 
 
 \bibliographystyle{plain}
