--- a/project/report.tex
+++ b/project/report.tex
@@ -411,7 +411,7 @@ Let $t\in{}[s,n]$, where $s$ is the starting point and $n$ is the number of trai
 For each $t$ we train our sequential classifiers using the performance of the Dow Jones the first $t-1$ days.
 We then use the sequential classifiers to predict the maximum likelihood value of $Y^{(t)}$ using the model parameters found in training.
 
-\begin{figure*}
+\begin{figure*}[t]
 \center
 \hspace{0.5cm}
 \includegraphics[width=16cm]{experiments/seq_baseline.pdf}
