--- a/project/report.tex
+++ b/project/report.tex
@@ -32,7 +32,7 @@ To this end we have implemented a suite of Machine Learning classifiers with com
 We combine these with feature and topic modeling techniques to explore various approaches to predicting the Dow Jones.
 
 We find that we correctly classify the movement of the Dow Jones with 83.4\% accuracy based on the next days article of the Wall Street Journal using AdaBoost, which is strong evidence that a correlation between the two exist and that it can be detected using algorithmic approaches.
-Using Naive Bayes we achieve an accuracy of 53.84\% in predicting todays movement of the DJ based on this mornings article of the WSJ.
+Using Naive Bayes we achieve an accuracy of 53.84\% in predicting todays movement of the DJ based on this mornings article of the WSJ in cross validation and $57.26\%$ accuracy in an online setting.
 This demonstrates that the correlation between the two may actually be used to make money.
 Finally, using Hidden Markov Models to model todays performance based on previous performance, combined with Naive Bayes to incorporate todays issue of the WSJ we achieve an accuracy of 55.7\% in an online setting.
 This demonstrates that in a real world setting it may be possible to make money using our techniques.
