--- a/project/report.tex
+++ b/project/report.tex
@@ -391,14 +391,18 @@ Applying SVMs to our data uncovered many issues with convergence similar to thos
 
 We trained a kernelized SVM with a radial basis function using several different bandwidth and $C$ parameters, and they all ended up classifying everything as an up day. We believe that for high bandwidths the greater proportion of up days in the training data results in a decision boundary that includes all data points. Since all points are clustered so close together (see the graphical representations of LSI features earlier), this results in the same decision for all points. Using a quadratic kernel with $C=1E9$ on the current day data resulted in a classifier that does not just choose the same value, but it only classified 51.91\% of the verification days correctly on average, which is lower than the predictors which choose only one answer. Even training on the augmented data was tricky and gave poor results. The main problem with SVMs on this data is that it is difficult to separate in a general way under any basis function. As illustrated graphically earlier, the different classes are distributed similarly with slight differences in lower dimensions. The KNN technique works somewhat because some information can be gathered from groups of nearby points, but attempting to create a decision boundary directly as SVMs do is difficult because of the distribution of the data.
 
-From our results with these algorithms, we have strong evidence to support the hypothesis that newspaper articles can be used to classify stock market directions in general by using features that are highly dependent on the market (i.e. the articles for the day following the one we are classifying). Our results show that we can obtain some information that is useful in making future predictions in the market, particularly by using Naive Bayes and AdaBoost, but the correlation is very weak as we would expect. KNN methods show the dimensionality reduction using LSI does provide semantic information as expected, but it is either not expressive enough or not measuring the right semantic information. It is possible that our simplifying assumption that we can take a bag of words to represent an entire day is incorrect. We may have been able to obtain better results by modeling the topics within articles directly rather than through a latent model.
+\begin{figure*}[t]
+\center
+\hspace{0.5cm}
+\includegraphics[width=16cm]{experiments/seq_baseline.pdf}
+\caption{Plot showing two baseline heuristics. The pick-most-common heuristic predicts the direction that was most common in earlier days, while the pick-previous heuristic just predicts the same direction as the previous day. Both heuristics are plotted with accumulative number of predictions up to that day (blue), and prediction accuracy up to that day (green).}
+\label{fig:seq-baseline}
+\end{figure*}
 
-\subsubsection{Conclusions}
+From our results with these algorithms, we have strong evidence to support the hypothesis that newspaper articles can be used to classify stock market directions in general by using features that are highly dependent on the market (i.e. the articles for the day following the one we are classifying). Our results show that we can obtain some information that is useful in making future predictions in the market, particularly by using Naive Bayes and AdaBoost, but the correlation is very weak as we would expect. KNN methods show the dimensionality reduction using LSI does provide semantic information as expected, but it is either not expressive enough or not measuring the right semantic information. It is possible that our simplifying assumption that we can take a bag of words to represent an entire day is incorrect. We may have been able to obtain better results by modeling the topics within articles directly rather than through a latent model.
 
 \subsection{Predicting the Dow Jones based on past trends}
 \label{dj->dj}
-
-\TODO{Fred: Add a discussion about making money to answer Q3}.
 
 In this section we look at predicting the performance of the Dow Jones based on past trends to answer research question 2.
 That is, at time $t$ we make predictions purely based on the previously observed performance of the Dow Jones, represented by the sequence $(Y^{(1)}, ..., Y^{(t-1)})$, and do not take Wall Street Journal articles into account.
@@ -410,14 +414,6 @@ Our experimental setup is as follows.
 Let $t\in{}[s,n]$, where $s$ is the starting point and $n$ is the number of training examples (days) as before.
 For each $t$ we train our sequential classifiers using the performance of the Dow Jones the first $t-1$ days.
 We then use the sequential classifiers to predict the maximum likelihood value of $Y^{(t)}$ using the model parameters found in training.
-
-\begin{figure*}[t]
-\center
-\hspace{0.5cm}
-\includegraphics[width=16cm]{experiments/seq_baseline.pdf}
-\caption{Plot showing two baseline heuristics. The pick-most-common heuristic predicts the direction that was most common in earlier days, while the pick-previous heuristic just predicts the same direction as the previous day. Both heuristics are plotted with accumulative number of predictions up to that day (blue), and prediction accuracy up to that day (green).}
-\label{fig:seq-baseline}
-\end{figure*}
 
 We evaluated two reasonable baselines to use for comparison.
 The first, called \emph{pick-most-common}, predicts each $Y_{(t)}$ to be the most common movement of the stock market for $(Y^{(1)}, ..., Y^{(t-1)})$.
@@ -437,15 +433,6 @@ Since the pick-most-common heuristic for the most part dominates the pick-previo
 \subsubsection{Markov Models}
 \label{mm-eval}
 
-As described in Section~\ref{sec:mm} we implemented a M-order Markov Model for any M.
-We ran the Markov Model on the whole sequence for $M=[1,10]$ ($w=M+1$), each time training a Markov Model on the first $t-1$ elements of $Y$ and using the resulting parameter $\theta$ to predict the value of $Y^{(t)}$.
-We were able to train very high order Markov Models ($M=40$) using sparse parameter matrices.
-However, for higher orders the parameter matrices is mostly empty and predictions therefore just become a tie-breaking, which is not very useful.
-Figure~\ref{fig:mm-experiment} shows the aggregate prediction ratios of the Markov Models of order 1--6, together with the predict-most-common baseline.
-
-As we can see the lower order Markov Models perform better, which is because they converge on always predicting that the Dow Jones goes up (the dominant direction). Thus they closely follow the pick-most-common heuristic once they stabilize.
-However, for early predictions the Markov Model has not yet become convinced that it should predict that the Dow Jones goes up. In fact, early in 2007, when there was less market volatile that later in the year, the fourth order Markov Model is able to outperform the baseline because it finds local trends.
-
 \begin{figure*}
 \center
 \hspace{0.5cm}
@@ -454,20 +441,17 @@ However, for early predictions the Markov Model has not yet become convinced tha
 \label{fig:mm-experiment}
 \end{figure*}
 
+As described in Section~\ref{sec:mm} we implemented a M-order Markov Model for any M.
+We ran the Markov Model on the whole sequence for $M=[1,10]$ ($w=M+1$), each time training a Markov Model on the first $t-1$ elements of $Y$ and using the resulting parameter $\theta$ to predict the value of $Y^{(t)}$.
+We were able to train very high order Markov Models ($M=40$) using sparse parameter matrices.
+However, for higher orders the parameter matrices is mostly empty and predictions therefore just become a tie-breaking, which is not very useful.
+
+Figure~\ref{fig:mm-experiment} shows the aggregate prediction ratios of the Markov Models of order 1--6, together with the predict-most-common baseline.
+As we can see the lower order Markov Models perform better, which is because they converge on always predicting that the Dow Jones goes up (the dominant direction). Thus they closely follow the pick-most-common heuristic once they stabilize.
+However, for early predictions the Markov Models has not yet become convinced that it should predict that the Dow Jones goes up. In fact, early in 2007, when there was less market volatile that later in the year, the fourth order Markov Model is able to outperform the baseline because it finds local trends.
+
 \subsubsection{Hidden Markov Models}
 \label{hmm-eval}
-
-As described in Section~\ref{sec:hmm} we also implemented a Hidden Markov Model (HMM) predictor that relies heavily on MATLABs HMM toolkit for training and inference.
-We ran our HMMon the whole sequence of data. For each $t$ we used all preceding observations ($Y^{(1)}$, ..., $Y^{(t-1)}$) to train our HMM and then used the HMM to predict $Y^{(t)}$.
-We found that altering the initial guesses for the transition matrix A and emission matrix B didn't impact our predictions much.
-However, we postulated two hidden states and made both A and B diagonal matrices with 0.6 on the diagonal.
-
-Figure~\ref{fig:hmm-experiment} shows the HMM performance as a function of days.
-The HMM predictor achieved 54.8\% accuracy on the whole dataset and thus also failed to beat the pick-most-common heuristic.
-To gain some insight into why this is we also plotted the performance of the Dow Jones.
-As we can see the Dow Jones follow a clear up-trend in the beginning of the year, while the last part of the year is very volatile without many longer-term downtrends.
-The HMM therefore has few opportunities to get leverage on the baseline.
-However, one such opportunity appears just before day 100. Here we can see that the Dow Jones falls for several days. This naturally causes the baseline's accuracy to fall, while the HMM is able to address the trend and reverse course to predicting negative days.
 
 \begin{figure*}
 \center
@@ -477,6 +461,18 @@ However, one such opportunity appears just before day 100. Here we can see that 
 \label{fig:hmm-experiment}
 \end{figure*}
 
+As described in Section~\ref{sec:hmm} we also implemented a Hidden Markov Model (HMM) predictor that relies heavily, but not exclusively, on MATLABs HMM toolkit for training and inference.
+We ran our HMMon the whole sequence of data. For each $t$ we used all preceding observations ($Y^{(1)}$, ..., $Y^{(t-1)}$) to train our HMM and then used the HMM to predict $Y^{(t)}$.
+We found that altering the initial guesses for the transition matrix A and emission matrix B didn't impact our predictions much.
+Therefore, we in all the following we use two hidden states and initialize both A and B diagonal matrices with 0.6 on the diagonal.
+
+Figure~\ref{fig:hmm-experiment} shows the HMM performance as a function of days.
+The HMM predictor achieved a total of 54.8\% accuracy on the whole dataset running in an online fashion, and thus also failed to beat the pick-most-common heuristic.
+To gain some insight into why this is we also plotted the performance of the Dow Jones.
+As we can see the Dow Jones follow a clear up-trend in the beginning of the year, while the last part of the year is very volatile without many longer-term downtrends.
+The HMM therefore has few opportunities to get leverage on the baseline.
+However, one such opportunity appears just before day 100. Here we can see that the Dow Jones falls for several days. This naturally causes the baseline's accuracy to fall, while the HMM is able to address the trend and reverse course to predicting negative days.
+As such, although the HMM is also ineffective in times of high volatility, it is much more robust to changing trends than the pick-most-common heuristic.
 
 \subsubsection{Hidden Markov Models as priors to Naive Bayes}
 
@@ -488,15 +484,20 @@ However, one such opportunity appears just before day 100. Here we can see that 
 \label{fig:hmm-nb-experiment}
 \end{figure*}
 
-...
+The final sequential model that we will discuss here the a combination of Hidden Markov Models with Naive Bayes we described in Section~\ref{sec:hmm} and illustrated in Figure~\ref{fig:hmm-nb-predict}.
+In this model we run our Hidden Markov Model on the first $t-1$ days as before, but instead of predicting the most likely day we use the marginal probability $p(Y^{(t)})$ as a prior for Naive Bayes applied to the textual corpus $X^{(t)}$ of day $t$.
 
-Figure~\ref{fig:hmm-nb-experiment}
+Figure~\ref{fig:hmm-nb-experiment} compares the performance of our hybrid HMM+NB model with with: the pick-most-common baseline, Naive Bayes with a sample prior (ratio of each word occurring in previous days), the vanilla HMM, and Naive Bayes with a uniform prior $\pi=(0.5, 0.5)$.
+The most salient result is that combining HMMs with Naive Bayes does indeed improve the performance of vanilla HMM on this dataset.
+In fact the HMM+NB performance dominates the performance of HMM on all days.
+However, we also see that Naive Bayes with a regular sample prior outperforms both, performing as well as the pick-most-common baseline.
+This is because the sample prior essentially is a probabilistic variant of pick-most-common, and Naive Bayes is overwhelmed by this strong signal.
+We can verify this by observing that Naive Bayes with a uniform prior (cyan) perform worse, ending the year as the weakest sequential technique.
 
+However, the fact that Naive Bayes with an uniform prior traces the pick-most-common heuristic for most of the year strongly suggests that the WSJ articles have predictive power.
+The fact that it performs poorly at the end of the year might be explained by the market volatility, which caused uncertainty in people which was then reflected in the WSJ and picked up by Naive Bayes.
 
-Two ideas for hmm-nb: normalize hmm posteriors/nb priors towards 0.5 to make them less dominant in nb, or run hmm with a relatively small window to make hmm less certain. This would give the weak signal from naive bayes a chance to win through.
-
-
-\subsubsection{Conclusions}
+\subsubsection{Obsercations}
 
 Generally, we see that Markov Models and Hidden Markov Models perform worse than the simple pick-most-common heuristics for 2007. This is because that heuristic is pretty good for this year, with 57.4\% accuracy. Another reason is that the Dow Jones this year is very volatile and the only very significant long-term trends are positive. The heuristic naturally catches these trends, while the (Hidden) Markov Models have very few significant downward trends to use to get leverage over the baseline.
 
@@ -511,6 +512,8 @@ This also helps explain why (Hidden) Markov Models, which are based on finding t
 We implemented several techniques for classification and feature modeling and evaluated their performance on predicting the movement of the Dow Jones.
 Our results show suggest that using such techniques as a foundations for investing may be practical, but that they would be risky.
 Although, we find it hard to beat just always predicting up for 2007, we expect the techniques we employ to generalize better and be more robust on following years. 
+
+In conclusion,  sequential machine learning techniques together with non-sequential techniques that incorporate textual data such as the Wall Street Journal seems to yield a fairly robust system for predicting stock market performance. With sufficient engineering and close supervision they may be practical for real world usage.
 
 \appendix
 
