--- a/project/report.bib
+++ b/project/report.bib
@@ -26,6 +26,25 @@
   note = "\url{http://www.vatsals.com/Essays/MachineLearningTechniquesforStockPrediction.pdf}"
 }
 
+@other{spam,
+
+	note="\url{http://en.wikipedia.org/wiki/Bayesian_spam_filtering}"
+}
+
+@other{techindicator,
+	note="\url{http://www.investopedia.com/articles/trading/11/using-multiple-indicators-to-predict-market-fluxuations.asp}"
+}
+
+@article{techdim,
+  title={Dimension reduction of technical indicators for the prediction of financial time series-Application to the BEL20 Market Index},
+  author={WERTZ, V. and VERLEYSEN, M.},
+  journal={European Journal of Economic and Social Systems},
+  volume={15},
+  number={2},
+  pages={31--48},
+  year={2001}
+}
+
 @article{lsi,
   title={Indexing by latent semantic analysis},
   author={Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
@@ -54,3 +73,4 @@
   year={2003},
   publisher={JMLR. org}
 }
+
